[package]
name = "toolkit-rs"
version = "1.0.14"
edition = "2021"
description = "Rust toolkit library(logger, time, painc handle)"
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/utils-rs"

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.99"
chrono = { version = "0.4.42" }

log = { version = "0.4.28", default-features = false, features = [
    "std",
], optional = true }
ftlog = { version = "0.2.15", optional = true }
time = { version = "0.3.43", features = [
    "local-offset",
    "formatting",
], optional = true }


tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt",
    "process",
    "time",
] }

[features]
default = ["logger"]
panic_handle = []
logger = ["dep:ftlog", "dep:time", "dep:log"]
