[package]
name = "toolkit-rs"
version = "1.0.16"
edition = "2021"
description = "Rust toolkit library(logger, time, painc handle)"
license = "MIT"   
authors = ["yaobos@outlook.com"]  
repository = "https://github.com/yaobo-lab/toolkit-rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42" }

log = { version = "0.4.28", default-features = false, features = [
    "std",
], optional = true } 
flexi_logger =  { version ="0.31.7",optional = true}

tokio = { version = "1.48.0", default-features = false, features = [
    "macros",
    "rt",
    "process",
    "time",
] }

[features]
default = ["logger","panic_handle"]
panic_handle = []
logger = ["dep:flexi_logger", "dep:log"]


[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["panic_handle"] 